tests/dataset/tpc-ds/compiler/java/q78.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq784236860033/001/Q78.java:177: error: incompatible types: possible lossy conversion from double to int
                res0.add(new SsSoldYearSsItemSkSsCustomerSkRatioStoreQtyStoreWholesaleCostStoreSalesPriceOtherChanQtyOtherChanWholesaleCostOtherChanSalesPrice(s.ss_sold_year, s.ss_item_sk, s.ss_customer_sk, s.ss_qty / (((Objects.equals(w, null) ? 0 : w.ws_qty)) + ((Objects.equals(c, null) ? 0 : c.cs_qty))), s.ss_qty, s.ss_wc, s.ss_sp, ((Objects.equals(w, null) ? 0 : w.ws_qty)) + ((Objects.equals(c, null) ? 0 : c.cs_qty)), ((Objects.equals(w, null) ? 0.000000 : w.ws_wc)) + ((Objects.equals(c, null) ? 0.000000 : c.cs_wc)), ((Objects.equals(w, null) ? 0.000000 : w.ws_sp)) + ((Objects.equals(c, null) ? 0.000000 : c.cs_sp))));
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           ^
/tmp/TestJavaCompiler_TPCDSQueriesq784236860033/001/Q78.java:184: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new SsSoldYearSsItemSkSsCustomerSkRatioStoreQtyStoreWholesaleCostStoreSalesPriceOtherChanQtyOtherChanWholesaleCostOtherChanSalesPrice(1998, 1, 1, 1.250000, 10, 50.000000, 100.000000, 8, 40.000000, 80.000000))))) throw new AssertionError("expect failed");
                                                                                                                                                                                                                                         ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
